--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = [
 description = "Read from sources and stuff"
 readme = "README.md"
 requires-python = ">=3.10"
+dependencies = [
+  "roskarl>=2.3.4",
+]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
