--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+          pip install polars==1.37.1
+          pip install roskarl==2.3.4
           pip install build
           pip install twine
           pip install -e .
