--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,25 +9,30 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install polars==1.37.1
-          pip install roskarl==2.3.4
-          pip install build
-          pip install twine
-          pip install -e .
+          uv pip install --system pytest build twine
+          uv pip install --system -e .
+
       - name: Run tests
         run: |
           pytest
+
       - name: Build package
         run: |
           python -m build
+
       - name: Publish package to PyPI
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
