--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,12 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install --system pytest build twine
-          uv pip install --system -e .
-
-      - name: Run tests
-        run: |
-          pytest
+          uv pip install --system build twine
 
       - name: Build package
         run: |
