--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "roskarl>=2.3.4",
   "polars==1.37.1",
   "pyodbc==5.1.0",
+  "paramiko==4.0.0",
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
